--- a/configure.ac
+++ b/configure.ac
@@ -13,22 +13,11 @@ AC_CHECK_TOOL(STRIP, [strip], [:])
 
 DVERSION="`${CXX} --version | grep apple-darwin || :`"
 case "$DVERSION" in
-  *-apple-darwin17*) DARWIN="High-Sierra" ;;
-  *-apple-darwin16*) DARWIN="Sierra" ;;
-  *-apple-darwin15*) DARWIN="El-Capitan" ;;
-  *-apple-darwin14*) DARWIN="Yosemite" ;;
-  *-apple-darwin13*) DARWIN="Mavericks" ;;
-  *-apple-darwin12*) DARWIN="Mountain-Lion" ;;
-  *-apple-darwin11*) DARWIN="Lion" ;;
-  *-apple-darwin10*) DARWIN="Snow-Leopard" ;;
-  *-apple-darwin9*) DARWIN="Leopard" ;;
-  *-apple-darwin?)
-    AC_MSG_ERROR([echo Unsupported Mac OSX version $DVERSION])
-    ;;
+  *-apple-darwin*) DARWIN="true" ;;
 esac
 
 if test -n "${DARWIN}"; then
-  AC_MSG_NOTICE([Mac OSX ${DARWIN} detected])
+  AC_MSG_NOTICE([Mac OSX detected])
   CXXFLAGS="${CXXFLAGS} -pipe -gdwarf-2 -Wno-overloaded-virtual"
 fi
 AC_SUBST([DARWIN])
