--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .depend
-qmake_qmake_immediate.qrc
+*qmake_qmake_immediate.*
 .qmake.stash
 .build-stamp
 *.o
@@ -23,3 +23,4 @@ autom4te.cache/
 config.log
 config.status
 configure
+misc/Info.plist
