Add Miguel Romera <mrmsoftdonation@gmail.com> as new spanish maintainer

--- a/lang/Makefile
+++ b/lang/Makefile
@@ -5,8 +5,8 @@ BUILD=..
 endif
 include $(TOPDIR)/Rules.mak
 
-PO_LANGUAGES=es tr fr sk
-LANGUAGES=de ru hr pl pt_BR $(PO_LANGUAGES)
+PO_LANGUAGES=tr fr sk
+LANGUAGES=de ru hr pl pt_BR es $(PO_LANGUAGES)
 QM_XCA=$(patsubst %, xca_%.qm, $(LANGUAGES))
 QM_QT=$(patsubst %, qt_%.qm, $(LANGUAGES))
 TS_XCA=$(patsubst %, xca_%.ts, $(PO_LANGUAGES))
