Make PKCS11 libs, working dir and main-window size host-dependent
A "hostId" determines the current host and is appended to
the "workingdir", "pkcs11path" and "mw_geometry" settings
in the database. This allows opening the database
on different hosts without wrong workingdir or not
loadable PKCS#11 libraries

--- a/configure.ac
+++ b/configure.ac
@@ -18,7 +18,8 @@ esac
 
 if test -n "${DARWIN}"; then
   AC_MSG_NOTICE([Mac OSX detected])
-  CXXFLAGS="${CXXFLAGS} -pipe -gdwarf-2 -Wno-overloaded-virtual"
+  CXXFLAGS="${CXXFLAGS} -pipe -gdwarf-2"
+  LIBS="${LIBS} -framework IOKit -framework CoreFoundation"
 fi
 AC_SUBST([DARWIN])
 AC_SUBST([MACDEPLOYQT])
