Use datadir for xpm path
Again, this follows autotools conventions.

--- a/Local.mak.in
+++ b/Local.mak.in
@@ -33,5 +33,6 @@ docdir=@docdir@
 htmldir=@htmldir@
 mandir=@mandir@
 bindir=@bindir@
+datadir=@datadir@
 datarootdir=@datarootdir@
 xca_prefix=${datarootdir}/${PACKAGE_TARNAME}
