--- a/misc/xca.desktop
+++ b/misc/xca.desktop
@@ -8,7 +8,7 @@ Comment[fi]=Graafinen X.509-varmenteiden hallintatyökalu
 Comment[fr]=Création et gestion de certificats conformes à la norme X.509
 Comment[hr]=Grafičko korisničko sučelje za upravljanje životnim ciklusom X.509 sukladnih potvrda
 Exec=xca %F
-Icon=xca-32x32
+Icon=xca
 Terminal=false
 Categories=Application;Utility;Qt;
 MimeType=application/x-xca-database;application/x-xca-template;application/x-x509-ca-cert;application/pkcs10;application/x-pkcs7-certificates;application/x-pkcs12;
