Adapt build methods for Apple developer account
Use Apple developer certificates for code signing and
prepare DMG for notarization.

Tweak the app to match the App Store requirements
Add an entitlements.plist
  com.apple.security.app-sandbox: true
  com.apple.security.network.client: true
  com.apple.security.files.user-selected.read-write: true

--- a/Local.mak.in
+++ b/Local.mak.in
@@ -6,8 +6,8 @@ export TOPDIR=@abs_srcdir@
 export VERSION=@PACKAGE_VERSION@@ITERATION@
 export HOST=@HOST@
 
-CPPFLAGS+=-Wall -Wextra -DXCA_PREFIX=\"${xca_prefix}\" -DETC=\"@sysconfdir@\" -DDOCDIR=\"@docdir@\" @CXXFLAGS@
-CFLAGS+=-O2 -ggdb -std=c++11
+CPPFLAGS+=-Wall -Wextra -DXCA_PREFIX=\"${xca_prefix}\" -DETC=\"@sysconfdir@\" -DDOCDIR=\"@docdir@\"
+CFLAGS+=-O2 -ggdb -std=c++11 @CXXFLAGS@
 LIBS=@LIBS@
 
 MOC=@QT_MOC@
