--- a/misc/Info.plist.in
+++ b/misc/Info.plist.in
@@ -5,13 +5,13 @@
 	<key>CFBundleExecutable</key>
 	<string>xca</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>© 2020, Christian Hohnstädt</string>
+	<string>© 2021, Christian Hohnstädt</string>
 	<key>NSHighResolutionCapable</key>
 	<string>True</string>
 	<key>CFBundleShortVersionString</key>
 	<string>@PACKAGE_VERSION@</string>
 	<key>CFBundleVersion</key>
-	<string>@PACKAGE_VERSION@</string>
+	<string>@PACKAGE_VERSION@@ITERATION@</string>
 	<key>CFBundleIconFile</key>
 	<string>xca-mac-icon.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -22,8 +22,12 @@
 	<string>@PACKAGE_NAME@</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
-	<key>CFBundleSignature</key>
-	<string>cxca</string>
+	<key>CFBundleSupportedPlatforms</key>
+	<array>
+		<string>MacOSX</string>
+	</array>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.utilities</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
@@ -41,8 +45,8 @@
 			<string>XCA Database</string>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
-		        <key>LSIsAppleDefaultForType</key>
-			<true/>
+		        <key>LSHandlerRank</key>
+			<string>Owner</string>
 		</dict>
 		<dict>
 			<key>CFBundleTypeExtensions</key>
@@ -59,8 +63,8 @@
 			<string>XCA Template</string>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
-		        <key>LSIsAppleDefaultForType</key>
-			<true/>
+		        <key>LSHandlerRank</key>
+			<string>Owner</string>
 		</dict>
 	</array>
 
