Declare ITSAppUsesNonExemptEncryption:No for AppStore

--- a/misc/Info.plist.in
+++ b/misc/Info.plist.in
@@ -30,6 +30,8 @@
 	<string>public.app-category.utilities</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>@MACOS_VERSION@.0</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<string>no</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
