Make the macOS SDK release a configure option
Write the Release to LSMinimumSystemVersion
Pick the macos animal-name and add it as extra version

Re-add building OpenSSL and libtool with the correct macos SDK version.

Now after having called build-mac.sh script, building with "make"
in the xca-macbuild dir works as expected.

--- a/Local.mak.in
+++ b/Local.mak.in
@@ -9,6 +9,7 @@ export HOST=@HOST@
 CPPFLAGS+=-Wall -Wextra -DXCA_PREFIX=\"${xca_prefix}\" -DETC=\"@sysconfdir@\" -DDOCDIR=\"@docdir@\"
 CFLAGS+=-O2 -ggdb -std=c++11 @CXXFLAGS@
 LIBS=@LIBS@
+EXTRA_VERSION=@EXTRA_VERSION@
 
 MOC=@QT_MOC@
 UIC=@QT_UIC@
